tests/errors/err_mut_param_temp_arg.mix
// ERROR: must be a mutable variable, field, or dereference
set_to(v!: int, next: int)
    v! = next

main()
    x! = 0
    set_to(x + 1, 2)
